# PanoBeam

./: .gitignore  PanoBeam.sln  README.md
NvAPIWrapper/: NvAPIWrapper.vcxproj  NvAPIWrapper.vcxproj.filters  NvApiLib.cpp  NvApiLib.h
NvAPIWrapperMitCMake/: CMakeLists.txt  NvApiLib.cpp  NvApiLib.h  make.bat
NvAPIWrapperMitCMake/include/: nvapi.h
NvAPIWrapperMitCMake/lib/: nvapi.lib  nvapi64.lib
PanoBeam/: PanoBeam.csproj
PanoBeam.BlendControls/: PanoBeam.BlendControls.csproj
PanoBeam.BlendControls/Properties/: AssemblyInfo.cs
PanoBeam.Common/: PanoBeam.Common.csproj
PanoBeam.Common/Properties/: AssemblyInfo.cs
PanoBeam.Events/: PanoBeam.Events.csproj  ThreadOption.cs
PanoBeam.Events/Events/: Events.cs
PanoBeam.Events/Properties/: AssemblyInfo.cs
PanoBeam.Mapper/: PanoBeam.Mapper.csproj
PanoBeam/Properties/: AssemblyInfo.cs
PanoBeamConfiguration/: PanoBeam.Configuration.csproj
PanoBeamControls/: CalibrationUserControl.xaml  CalibrationUserControl.xaml.cs  CalibrationUserControlViewModel.cs  CameraUserControl.xaml  CameraUserControl.xaml.cs  CameraUserControlViewModel.cs  PanoBeam.Controls.csproj  packages.config
PanoBeamDebug/: PanoBeamDebug.csproj  Program.cs
PanoBeamGui/: App.xaml  MainWindow.xaml  MainWindow.xaml.cs  PanoBeamGui.csproj  ScreenView.xaml  ScreenView.xaml.cs  ViewModel.cs  packages.config
PanoBeamLib/: Calibration.cs  CalibrationStep.cs  Helpers.cs  NvApi.cs  PanoBeamLib.csproj  PanoScreen.cs  Projector.cs  Screen.cs  VideoCapture.cs
PanoBeamSetup/: PanoBeamSetup.wixproj  Product.wxs
(+7 files in other folders)
